add search image

--- a/src/app/components/page/page-list/page-list.component.html
+++ b/src/app/components/page/page-list/page-list.component.html
@@ -23,7 +23,10 @@
       <a routerLink="./{{page._id}}/widget">{{page.name}}</a>
     </li>
   </ul>
+  <app-flickr-image-search></app-flickr-image-search>
 </div>
+
+
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
