--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -20,6 +20,10 @@
       <button [disabled]="!f.valid" class="btn btn-primary btn-block" type="submit">Login</button>
     </div>
 
+    <a href="/facebook/login" class="btn btn-primary btn-block"> <span class="fa fa-facebook"></span>
+      Facebook Login
+    </a>
+
     <div class="form-group">
       <a routerLink="/register" class="btn btn-success btn-block">Register</a>
     </div>
