--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -20,9 +20,9 @@
       <button [disabled]="!f.valid" class="btn btn-primary btn-block" type="submit">Login</button>
     </div>
 
-    <a href="/facebook/login" class="btn btn-primary btn-block"> <span class="fa fa-facebook"></span>
-      Facebook Login
-    </a>
+    <div class="form-group">
+      <a routerLink="http://localhost:3200/facebook/login" class="btn btn-success btn-block">Facebook Login</a>
+    </div>
 
     <div class="form-group">
       <a routerLink="/register" class="btn btn-success btn-block">Register</a>
