--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="form-group">
-      <a routerLink="http://localhost:3200/facebook/login" class="btn btn-success btn-block">Facebook Login</a>
+      <a routerLink="/facebook/login" class="btn btn-success btn-block">Facebook Login</a>
     </div>
 
     <div class="form-group">
