--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -24,6 +24,11 @@
       <a href="/facebook/login" class="btn btn-success btn-block">Facebook Login</a>
     </div>
 
+    <a href="{{baseUrl}}/facebook/login" class="btn btn-primary btn-block">
+      <span class="fa fa-facebook"></span>
+      Facebook login
+    </a>
+
     <div class="form-group">
       <a routerLink="/register" class="btn btn-success btn-block">Register</a>
     </div>
