--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -24,11 +24,14 @@
       <a routerLink="/register" class="btn btn-success btn-block">Register</a>
     </div>
 
+    <!--<a  class="btn btn-primary btn-block">-->
+      <!--<span class="fa fa-facebook"></span>-->
+      <!--Facebook login-->
+    <!--</a>-->
+    <button class="btn btn-primary btn-block" (click)="navigateToFacebook()">Facebook login</button>
+
   </form>
-  <a href="{{baseUrl}}/facebook/login" class="btn btn-primary btn-block">
-    <span class="fa fa-facebook"></span>
-    Facebook login
-  </a>
+
 </div>
 
 
