--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -28,8 +28,8 @@
       <!--<span class="fa fa-facebook"></span>-->
       <!--Facebook login-->
     <!--</a>-->
-    <button class="btn btn-primary btn-block" (click)="navigateToFacebook()">Facebook login</button>
 
+    <button class="btn btn-primary btn-block" (click)="navigateToFacebook()">Facebook Login</button>
   </form>
 
 </div>
