--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -29,7 +29,7 @@
       <!--Facebook login-->
     <!--</a>-->
 
-    <button class="btn btn-primary btn-block" (click)="navigateToFacebook()">Facebook Login</button>
+    <button class="btn btn-primary btn-block" (click)="navigateToFacebook()">Facebook Login2</button>
   </form>
 
 </div>
