--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -24,12 +24,7 @@
       <a routerLink="/register" class="btn btn-success btn-block">Register</a>
     </div>
 
-    <!--<a  class="btn btn-primary btn-block">-->
-      <!--<span class="fa fa-facebook"></span>-->
-      <!--Facebook login-->
-    <!--</a>-->
-
-    <button class="btn btn-primary btn-block" (click)="navigateToFacebook()">Facebook Login2</button>
+    <button class="btn btn-primary btn-block" (click)="navigateToFacebook()">Facebook Login</button>
   </form>
 
 </div>
