project login and register

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,29 +7,13 @@
   <div class="container" >
     <div class="btn-group" dropdown>
       <button dropdownToggle type="button" class="btn btn-primary dropdown-toggle">
-        Link <span class="caret"></span>
+        Login <span class="caret"></span>
       </button>
       <ul *dropdownMenu class="dropdown-menu" role="menu">
-        <li role="menuitem"><a class="dropdown-item" href="/login">user   login</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/register">register</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123">Profile</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website">WebSiteList</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/new">WebsiteNewComponent</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111">WebsiteComponentWithId</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111/edit">WebSiteEdit</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111/page">PageListComponent</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111/page/new">PageNewComponent</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111/page/100">PageEditComponent</a></li>
-
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111/page/3/widget">WidgetListComponent</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111/page/3/widget/new">WidgetChooserComponent</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111/page/3/widget/100">WidgetEditComponentWithId</a></li>
-
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111/page/3/widget/100">WidgetHeading</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111/page/3/widget/200">WidgetImage</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111/page/3/widget/300">WidgetYoutube</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111/page/3/widget/400">WidgetHTML</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="/user/123/website/111/page/3/widget/500">WidgetTEXT</a></li>
+        <li role="menuitem"><a class="dropdown-item" href="/login/user">user login</a></li>
+        <li role="menuitem"><a class="dropdown-item" href="/login/admin">admin login</a></li>
+        <li role="menuitem"><a class="dropdown-item" href="/login/seller">seller login</a></li>
+        <li role="menuitem"><a class="dropdown-item" href="/login/advertiser">advertiser login</a></li>
       </ul>
     </div>
   </div>
