--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="errorFlag" class="alert alert-danger">
     {{errorMsg}}
   </div>
-  <h1>Login</h1>
+  <h1>{{userType}} Login</h1>
   <form (ngSubmit)="login()" #f="ngForm">
 
     <div class="form-group">
@@ -21,7 +21,7 @@
     </div>
 
     <div class="form-group">
-      <a routerLink="/register" class="btn btn-success btn-block">Register</a>
+      <a routerLink="./register" class="btn btn-success btn-block">Register</a>
     </div>
 
     <button class="btn btn-primary btn-block" (click)="navigateToFacebook()">Facebook Login</button>
