some functions can't realize

--- a/src/app/components/cart/cart-page.component.html
+++ b/src/app/components/cart/cart-page.component.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="cart-item-cell cart-item-quantity">
-                <!--<quantity-control [quantity]="cart.quantity" (onChange)="changeQuantity(cart,$event)"></quantity-control>-->
+                <quantity-control [quantity]="cart.quantity" (onChange)="changeQuantity(cart,$event)"></quantity-control>
             </div>
             <div class="cart-item-cell cart-item-total">
                 <div class="item-price">
