--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -3,8 +3,7 @@
     <div class="header-text">
       <div class="header-text-title">Plates</div>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec mollis sem. Etiam id luctus libero.
-        Vivamus vulputate urna eget velit iaculis, et interdum elit pellentesque. Duis porta nunc neque, nec volutpat erat lacinia a.
+          WELCOME
       </p>
     </div>
   </div>
@@ -15,7 +14,7 @@
       <div class="image-container">
         <div class="product-image" [ngStyle]="{'background-image': 'url(./assets/imgs/' + product.image + ')'}"></div>
         <div class="overlay">
-          <div class="button button-primary" [routerLink]="['../product',i+1]">View Details</div>
+          <div class="button button-primary" [routerLink]="['../products',i+1]">View Details</div>
           <div class="button button-primary" (click)="addToCart(product)">Add To Cart</div>
         </div>
       </div>
