--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,3 +1,97 @@
+<!--&lt;!&ndash;<div class="container">&ndash;&gt;-->
+<!--&lt;!&ndash;<div *ngIf="errorFlag" class="alert alert-danger">&ndash;&gt;-->
+<!--&lt;!&ndash;{{errorMsg}}&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--&lt;!&ndash;<h1>{{userType}} Login</h1>&ndash;&gt;-->
+<!--&lt;!&ndash;<form (ngSubmit)="login()" #f="ngForm">&ndash;&gt;-->
+
+<!--&lt;!&ndash;<div class="form-group">&ndash;&gt;-->
+<!--&lt;!&ndash;<input type="text" name="username" placeholder="username" class="form-control" ngModel required #username="ngModel">&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+<!--&lt;!&ndash;<div class="form-group">&ndash;&gt;-->
+<!--&lt;!&ndash;<input type="password" name="password" placeholder="password" class="form-control" ngModel required #password="ngModel">&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--&lt;!&ndash;<span class="help-block" *ngIf="!password.valid && password.touched">&ndash;&gt;-->
+<!--&lt;!&ndash;Please enter password!&ndash;&gt;-->
+<!--&lt;!&ndash;</span>&ndash;&gt;-->
+
+<!--&lt;!&ndash;<div class="form-group">&ndash;&gt;-->
+<!--&lt;!&ndash;<button [disabled]="!f.valid" class="btn btn-primary btn-block" type="submit">Login</button>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+<!--&lt;!&ndash;<div class="form-group">&ndash;&gt;-->
+<!--&lt;!&ndash;<a routerLink="./register" class="btn btn-success btn-block">Register</a>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+<!--&lt;!&ndash;<button class="btn btn-primary btn-block" (click)="navigateToFacebook()">Facebook Login</button>&ndash;&gt;-->
+<!--&lt;!&ndash;</form>&ndash;&gt;-->
+
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+
+
+
+
+
+<!--<div class="layout-container">-->
+<!--<div class= "image-container">-->
+<!--<div *ngIf="errorFlag" class="alert alert-danger">-->
+<!--{{errorMsg}}-->
+<!--</div>-->
+<!--<h1>{{userType}} Login</h1>-->
+<!--&lt;!&ndash;<h1>My profile</h1>&ndash;&gt;-->
+<!--</div>-->
+<!--<div class="cart-page-content" >-->
+<!--<div class="row cart-total">-->
+<!--<div class="col-lg-offset-6">-->
+
+<!--<div class="container-fluid">-->
+
+<!--&lt;!&ndash;<div *ngIf="errorFlag" class="alert alert-danger">&ndash;&gt;-->
+<!--&lt;!&ndash;{{errorMsg}}&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+<!--&lt;!&ndash;<div *ngIf="updateFlag" class="alert alert-info">&ndash;&gt;-->
+<!--&lt;!&ndash;{{updateMsg}}&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+<!--<form (ngSubmit)="login()" #f="ngForm">-->
+
+<!--<div class="form-group">-->
+<!--<input type="text" name="username" placeholder="username" ngModel required #username="ngModel">-->
+<!--</div>-->
+
+<!--<div class="form-group">-->
+<!--<input type="password" name="password" placeholder="password" ngModel required #password="ngModel">-->
+<!--</div>-->
+<!--<span class="help-block" *ngIf="!password.valid && password.touched">-->
+<!--Please enter password!-->
+<!--</span>-->
+
+<!--<div class="form-group">-->
+<!--<button [disabled]="!f.valid" type="submit">Login</button>-->
+<!--</div>-->
+
+<!--<div class="form-group">-->
+<!--<a routerLink="./register">Register</a>-->
+<!--</div>-->
+<!--<button (click)="navigateToFacebook()">Facebook Login</button>-->
+
+<!--</form>-->
+<!--</div>-->
+
+<!--<div class="cart-buttons">-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="cart-page-content">-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+
+
+
 <div class="container">
   <div *ngIf="errorFlag" class="alert alert-danger">
     {{errorMsg}}
@@ -28,8 +122,3 @@
   </form>
 
 </div>
-
-
-
-
-
